# .github

./: .codespellrc  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .renovaterc.json  .renovaterc.json5  .ruff.toml  .typos.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE.txt  README.md  default.json  pyproject.toml  setup.py
.github/: zizmor.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  bug_report.yml
.github/workflows/: add-to-project.yaml  licence.yaml  licence.yml  links.yaml  linting.yaml  linting.yml  safe-settings.yaml  tags.yaml  tags.yml
ISSUE_TEMPLATE/: question.md
actions/: README.md
actions/add-to-project/: README.md  action.yml
actions/dropbox/: README.md  action.yml  actions.yml
actions/github-pages/: README.md
actions/latex/: README.md
actions/licence/: README.md  action.yml
actions/links/: README.md  action.yml
actions/linting/: README.md  action.yml
actions/python/: README.md
actions/ruby/: README.md
actions/vale/: README.md  action.yml
precommit/: README.md  __init__.py  _run_hooks.py  python-hooks.yaml  run-hooks.py  run-python-hooks.py  run_hooks.py
precommit/general/: README.md  general-hooks.yaml  general-hooks.yml  general_hooks.py
precommit/latex/: README.md  latex-hooks.yaml  latex-hooks.yml  latex_hooks.py
precommit/lua/: README.md  lua-hooks.yaml  lua_hooks.py
precommit/python/: README.md  __init__.py  python-hooks.yaml  python-hooks.yml  python_hooks.py
prek/: README.md  _run_hooks.py  python-hooks.yaml
prek/general/: README.md  general-hooks.yaml  general_hooks.py
prek/latex/: README.md  latex-hooks.yaml  latex_hooks.py
renovate/: README.md  default-config.json  default-config.json5
safe-settings/: README.md  account.yaml  deployment.yaml  settings.yaml
(+27 files in other folders)
