[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
]

[project]
name = "precommit"
scripts = {latex-hooks = "precommit.latex.latex_hooks:main", python-hooks = "precommit.python.python_hooks:main"}
version = "0.0.0"

[tool.setuptools]
packages = [
    "precommit",
]

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
