[project]
authors = [
    {email = "patrickjamesroddy@gmail.com", name = "Patrick J. Roddy"},
]
description = """
This file is only present as the additional_dependencies in pre-commit require a
setup.py or pyproject.toml, otherwise it will not install them
"""
name = "pre_commit_placeholder_package"
readme = "README.md"
version = "0.0.0"
license.file = "README.md"

[tool.ruff]
fix = true
force-exclude = true
ignore = [
    "D203",
    "D212",
    "D407",
]
select = [
    "ALL",
]

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
