# This file is present to make sure that the pre-commit setup
# works, it is not intended to be an actual package

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm",
]

[project]
dynamic = [
    "version",
]
name = "pre_commit_placeholder_package"
readme = "README.md"

[tool.check-manifest]
ignore = [
    "*",
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
fix = true
force-exclude = true
lint.ignore = [
    "COM812",
    "D203",
    "D212",
    "D407",
    "D413",
    "ISC001",
]
lint.select = [
    "ALL",
]

[tool.setuptools]
packages.find = {}

[tool.setuptools_scm]
